--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/hospital
-spring.datasource.username=root
-spring.datasource.password=passsql
+#spring.datasource.url=jdbc:mysql://localhost:3306/hospital
+#spring.datasource.username=root
+#spring.datasource.password=passsql
+spring.datasource.url=jdbc:mysql://hospital.mysql.database.azure.com:3306/hospital
+spring.datasource.username=hsshadmin
+spring.datasource.password=stupidpasssql19&
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
