--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.url=jdbc:mysql://hospital.mysql.database.azure.com:3306/hospit
 spring.datasource.username=hsshadmin
 spring.datasource.password=stupidpasssql19&
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform = org.hibernate.dialect.MySQLDialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = update
 spring.mvc.format.date-time=yyyy-MM-dd HH:mm:ss
